--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   <section class="grid">
     <div class="card">
-      <img src="C:\Users\ASUS\Downloads\portofolio\portofolio\108CA16C-B321-40E3-8D0C-166557D15A56.jpg" alt="Burnt Cheese Cake" />
+      <img src="portofolio/108CA16C-B321-40E3-8D0C-166557D15A56.jpg" alt="Burnt Cheese Cake" />
       <div class="card-content">
         <h3>Burnt Cheese Cake</h3>
       </div>
