--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     }
     .card img {
       width: 100%;
-      height: 180px;
+      height: 200px;
       object-fit: cover;
     }
     .card-content {
@@ -90,14 +90,14 @@
     </div>
 
     <div class="card">
-      <img src="C:\Users\ASUS\Downloads\portofolio\portofolio\93580665-E388-4814-A606-F4925309FE46.jpg" alt="Putri Salju" />
+      <img src="portofolio/93580665-E388-4814-A606-F4925309FE46.jpg" alt="Putri Salju" />
       <div class="card-content">
         <h3>Putri Salju</h3>
       </div>
     </div>
 
     <div class="card">
-      <img src="C:\Users\ASUS\Downloads\portofolio\portofolio\IMG_1546.jpg" alt="Palm Sugar" />
+      <img src="portofolio/IMG_1546.jpg" alt="Palm Sugar" />
       <div class="card-content">
         <h3>Palm Sugar</h3>
       </div>
@@ -106,21 +106,21 @@
 </br>
   <section class="grid">
     <div class="card">
-      <img src="C:\Users\ASUS\Downloads\portofolio\portofolio\IMG_1837.jpg" alt="Sagu Keju" />
+      <img src="portofolio/IMG_1837.jpg" alt="Sagu Keju" />
       <div class="card-content">
         <h3>Sagu Keju</h3>
       </div>
     </div>
 
     <div class="card">
-      <img src="C:\Users\ASUS\Downloads\portofolio\portofolio\IMG_4666.jpg" alt="Choco Muffin" />
+      <img src="portofolio/IMG_4666.jpg" alt="Choco Muffin" />
       <div class="card-content">
         <h3>Choco Muffin</h3>
       </div>
     </div>
 
     <div class="card">
-      <img src="C:\Users\ASUS\Downloads\portofolio\portofolio\IMG_7060.jpg" alt="Pie Susu" />
+      <img src="portofolio/IMG_7060.jpg" alt="Pie Susu" />
       <div class="card-content">
         <h3>Pie Susu</h3>
       </div>
@@ -129,21 +129,21 @@
 </br>
   <section class="grid">
     <div class="card">
-      <img src="C:\Users\ASUS\Downloads\portofolio\portofolio\IMG_9991.jpg" alt="Classic Cookies" />
+      <img src="portofolio/IMG_9991.jpg" alt="Classic Cookies" />
       <div class="card-content">
         <h3>Classic Cookies</h3>
       </div>
     </div>
 
     <div class="card">
-      <img src="C:\Users\ASUS\Downloads\portofolio\portofolio\IMG_1740.jpg" alt="Heart Cookies" />
+      <img src="portofolio/IMG_1740.jpg" alt="Heart Cookies" />
       <div class="card-content">
         <h3>Heart Cookies</h3>
       </div>
     </div>
 
     <div class="card">
-      <img src="C:\Users\ASUS\Downloads\portofolio\portofolio\IMG_9509.jpg" alt="Fudgy Brownies" />
+      <img src="portofolio/IMG_9509.jpg" alt="Fudgy Brownies" />
       <div class="card-content">
         <h3>Fudgy Brownies</h3>
       </div>
@@ -152,21 +152,21 @@
   </br>
   <section class="grid">
     <div class="card">
-      <img src="C:\Users\ASUS\Downloads\portofolio\portofolio\IMG_1931.jpg" alt="Thumbpint" />
+      <img src="portofolio/IMG_1931.jpg" alt="Thumbpint" />
       <div class="card-content">
         <h3>Thumbpint</h3>
       </div>
     </div>
 
     <div class="card">
-      <img src="C:\Users\ASUS\Downloads\portofolio\portofolio\IMG_5068.jpg" alt="Lasagna" />
+      <img src="portofolio/IMG_5068.jpg" alt="Lasagna" />
       <div class="card-content">
         <h3>Lasagna</h3>
       </div>
     </div>
 
     <div class="card">
-      <img src="C:\Users\ASUS\Downloads\portofolio\portofolio\IMG_2668.jpg" alt="Dimsum Cheese Chili Oil" />
+      <img src="portofolio/IMG_2668.jpg" alt="Dimsum Cheese Chili Oil" />
       <div class="card-content">
         <h3>Dimsum Cheese Chili Oil</h3>
       </div>
