--- a/index.html
+++ b/index.html
@@ -164,11 +164,32 @@
         <h3>Lasagna</h3>
       </div>
     </div>
+    
+    <div class="card">
+      <img src="portofolio/IMG_1835.jpg" alt="Nastar" />
+      <div class="card-content">
+        <h3>Nastar</h3>
+      </div>
+    </div>
 
     <div class="card">
       <img src="portofolio/IMG_2668.jpg" alt="Dimsum Cheese Chili Oil" />
       <div class="card-content">
         <h3>Dimsum Cheese Chili Oil</h3>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="portofolio/jajanan.jpg" alt="Jajan Tradisional 1" />
+      <div class="card-content">
+        <h3>Jajan Tradisional 1</h3>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="portofolio/tradisional.jpg" alt="Jajan Tradisional 2" />
+      <div class="card-content">
+        <h3>Jajan Tradisional 1</h3>
       </div>
     </div>
   </section>
