--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
     </div>
   </section>
   </br>
+  
   <section class="grid">
     <div class="card">
       <img src="portofolio/IMG_1931.jpg" alt="Thumbpint" />
@@ -171,7 +172,8 @@
         <h3>Nastar</h3>
       </div>
     </div>
-
+  </section>
+  </br>
     <div class="card">
       <img src="portofolio/IMG_2668.jpg" alt="Dimsum Cheese Chili Oil" />
       <div class="card-content">
