--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div>
     
     <div class="card">
-      <img src="portofolio/IMG_1835.jpg" alt="Nastar" />
+      <img src="portofolio/IMG_1835.JPG" alt="Nastar" />
       <div class="card-content">
         <h3>Nastar</h3>
       </div>
