--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
     </div>
   </section>
   </br>
+
+  <section class="grid">
     <div class="card">
       <img src="portofolio/IMG_2668.jpg" alt="Dimsum Cheese Chili Oil" />
       <div class="card-content">
@@ -187,9 +189,9 @@
         <h3>Jajan Tradisional 1</h3>
       </div>
     </div>
-
+    
     <div class="card">
-      <img src="portofolio/tradisional.jpg" alt="Jajan Tradisional 2" />
+      <img src="portofolio/tradisional.JPG" alt="Jajan Tradisional 2" />
       <div class="card-content">
         <h3>Jajan Tradisional 2</h3>
       </div>
