--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </div>
     
     <div class="card">
-      <img src="portofolio/tradisional.JPG" alt="Jajan Tradisional 2" />
+      <img src="portofolio/tradisional.jpg" alt="Jajan Tradisional 2" />
       <div class="card-content">
         <h3>Jajan Tradisional 2</h3>
       </div>
